syntax = "proto3";

package gen;

option go_package = "/authorization";

// import "google/api/annotations.proto";

message CheckTokenRequest {
    string token = 1;
}

message CheckTokenResponse {
    bool authorize = 1; 
    uint64 userId = 2;
}

message GetUserByIdRequest {
    uint64 userId = 1;
}

message GetUserByIdResponse {
    uint64  ID = 1;
    string Avatar = 2;
	string FirstName = 3;
	string LastName = 4;
	string MiddleName = 5;
	string Email = 6;
    bool   IsBanned = 7;
}

service AuthorizationService {
    rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
    // example {
    //     option (google.api.http) = {
    //         post: "/v1/auth/check-token"
    //         body: "*"
    //     };
    // } 

    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

